Changes in version 1.4.1

o NEW: `cpmIVperm` allows for permutation of `cpmIV` results

o FIX: NA communities throwing bad labels in `stable` and `comcat`

o FIX: `diversity`, `gateway`, and `participation` bug when communities lengths equal one 


Changes in version 1.4.0

o NEW: `dCor.parallel` parallelizes the `dCor` function to improve processing speed

o NEW: `dCor` computes the distance correlation for time series data (intended for use with `cpm`)

o FIX: named communities into `comcat` and `stable`

o FIX: where `comcat` and `stable` treats `NA` community membership as actual membership -- corrects `EGAnet::net.loads` outputs

o FIX: `comcat` and `stable` for *EGAnet*


Changes in version 1.3.3

o `node.redundant` function migrated to the *EGAnet* pacakge

o added the function `network.permutation` to compute permutation tests for network measures

o changed name of `net.coverage` to `network.coverage`


Changes in version 1.3.2

o updated Description file

o updated citation


Changes in version 1.3.1

o `TMFG` bug fix


Changes in version 1.3.0

o converged all Connectome Predictive Modeling into one documentation see `?cpm`

o migrated `net.scores` and `net.loads` to 'EGAnet' package

o added several new functions to implement the latest state-of-the-art Information Filtering Network method: Maximally Filtered Clique Forest (MFCF; thanks Guido!)

o added Guido Previde Massara as a contributor

o changed name of function `strength.dim` to `lnet.loads` and updated documentation

o added information about 'NetworkToolbox' on package load

o changed name of function `nams` to `lnet.score`, optimized function to be more efficient with large datasets, and updated documentation

o added function `item.overlap` to detect redundant nodes in a network

o added function `strength.dim` to identify within and between dimension node strength

o added `absolute` argument for `strength` and `stable` functions (extension for EGA package)
